# parallel_searching

./: CMakeLists.txt  README.md  test.cpp
Searcher/: CMakeLists.txt  InFileSearcher.cpp  InFileSearcher.h
SimpleTimer/: CMakeLists.txt  SimpleTimer.cpp  SimpleTimer.h
